garde/tests/ui/compile-fail/contains_mismatched_types.stderr
error[E0308]: mismatched types
 --> tests/ui/compile-fail/contains_mismatched_types.rs
  |
  |     #[garde(contains(NUM))]
  |                      ^^^ expected `&str`, found `&u32`
  |
  = note: expected reference `&str`
             found reference `&u32`
